--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -36,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@testing-library/jest-dom": "^5.3.0",
@@ -48,7 +48,7 @@
     "commitizen": "^4.0.3",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
-    "jest": "^25.2.3",
+    "jest": "24.9.0",
     "prettier": "2.0.2",
     "react-app-rewired": "^2.1.5",
     "ts-jest": "^25.2.1",
@@ -60,7 +60,6 @@
       "**/*.spec.tsx"
     ],
     "setupFilesAfterEnv": [
-      "@testing-library/react/cleanup-after-each",
       "@testing-library/jest-dom/extend-expect"
     ],
     "moduleNameMapper": {
