--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -35,7 +36,6 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@testing-library/jest-dom": "^5.3.0",
@@ -45,6 +45,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
     "commitizen": "^4.0.3",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
