--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "react-app-rewired test i  --env=jest-environment-jsdom-sixteen",
     "coverage": "react-app-rewired test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
@@ -61,6 +61,7 @@
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
     "jest": "24.9.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "prettier": "2.0.2",
     "react-app-rewired": "^2.1.5",
     "ts-jest": "^25.2.1",
